static/css/main.scss
/* ... */
/* Responsive */

@media screen and (max-width: 800px) {
footer .container {
    grid-template-columns: 1fr;
}

footer li {
    display: inline-block;
    padding: 0 1em;
}

footer .intro svg {
    margin-bottom: 16px;
    margin-top: 2em;
    margin-left: 0;
}



aside {
    grid-column: 1;
}



.container {

    grid-column-gap: 0;
    grid-template-columns: 1fr;
    padding: 0;
}

.container.courts {
    grid-template-columns: 1fr;
}





header .container {
  grid-template-columns: 5fr 18fr;
}
}

/* line 3, ../sass/star-ratings.scss */
.star-ratings {
  display: inline-block;
  position: relative;
}
/* line 7, ../sass/star-ratings.scss */
.star-ratings ul {
  padding: 0;
  margin: 0;
  white-space: nowrap;
  list-style: none outside none;
  overflow: hidden;
}
/* line 14, ../sass/star-ratings.scss */
.star-ratings ul li {
  display: inline-block;
}

/* line 20, ../sass/star-ratings.scss */
.star-ratings-rating-full, .star-ratings-rating-empty {
  display: block;
  background: url("../images/bball.svg") no-repeat;
}

/* line 25, ../sass/star-ratings.scss */
.star-ratings-rating-foreground {
  top: 0;
  position: absolute;
  -moz-transition-property: width;
  -o-transition-property: width;
  -webkit-transition-property: width;
  transition-property: width;
  -moz-transition-duration: 0.15s;
  -o-transition-duration: 0.15s;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -moz-transition-timing-function: ease-in;
  -o-transition-timing-function: ease-in;
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

/* line 33, ../sass/star-ratings.scss */
.star-ratings-rating-stars-container {
  display: inline-block;
  position: relative;
}


    #dsr7335809e43ac46829823f69abfcbb024 .star-ratings-rating-empty {
        background-position:  0 !important;
    }

    
    #dsr7335809e43ac46829823f69abfcbb024 .star-ratings-rating-full:hover, #dsr7335809e43ac46829823f69abfcbb024 .star-ratings-rating-empty:hover {
        background-position:0  0 !important;
    }
    


.user-fields {
  margin:1em 0;
}

.location {
display:grid;
grid-template-columns: minmax(max-content,27px) 20px;
grid-gap: 1em;

@media screen and (max-width: 700px) {
grid-template-columns: 2fr 1fr;

   
}



 button {
   
    cursor: pointer;
    background:none;
    border: none;
    border-radius: 3px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-appearance: none;

 }
}

.user-profile--list {
  margin:1em 0;
  padding: 1em 0;
  display:grid;
  grid-template-columns: 150px 1fr 1fr;
  border-top:1px solid #eee;
li {
padding:1em 0;
}

  img {
      max-width: 50px;
    border-radius: 50%;
  }
}

